--- a/thesis.tex
+++ b/thesis.tex
@@ -23,6 +23,7 @@ framexleftmargin=6pt,framexrightmargin=6pt,
 xleftmargin=12pt,xrightmargin=12pt,
 breaklines=true,breakatwhitespace=true}
 
+\usepackage{amssymb}
 
 
 % -------------------------------------------------------------------
