--- a/thesis.tex
+++ b/thesis.tex
@@ -7,12 +7,10 @@
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage{enumitem}
-\usepackage[table,xcdraw]{xcolor}
-\usepackage{algorithm,algorithmic}
 
 
 
-\usepackage[x11names,dvipsnames,svgnames]{xcolor}
+
 %\usepackage[os=win]{menukeys}
 \usepackage{listings}
 \lstset{language=[LaTeX]TeX,columns=fullflexible,
@@ -23,8 +21,13 @@ framexleftmargin=6pt,framexrightmargin=6pt,
 xleftmargin=12pt,xrightmargin=12pt,
 breaklines=true,breakatwhitespace=true}
 
-\usepackage{amssymb}
+\usepackage[table,xcdraw]{xcolor}
+\usepackage{algorithm,algorithmic}
 
+
+\usepackage{amssymb}
+\usepackage{multirow}
+\usepackage[x11names,dvipsnames,svgnames]{xcolor}
 
 % -------------------------------------------------------------------
 % user annotations
