fixed compilation issue :| I should probably just stick to overleaf to edit my files..

--- a/3framework-overview.tex
+++ b/3framework-overview.tex
@@ -45,7 +45,6 @@ The use of quantization in the mathematical and digital signal processing field 
 \begin{figure}[hbt!]\centering
 \includegraphics[width=\textwidth]{image/general/quantization.png}
 \caption{Quantization}
-\label{fig:framework}
 \end{figure}
 
 
@@ -99,7 +98,7 @@ While humans' visible spectrum $(400nm - 700nm)$ can be represented using the re
 \begin{figure}[hbt!]\centering
 \includegraphics[width=.7\textwidth]{image/general/VisibleSpectrum.png}
 \caption{RGB Values and their corresponding spectrum}
-\label{fig:distanceMeasure}
+\label{fig:visibleSpectrum}
 \end{figure}
 
 
