--- a/4vehicle-semantics-extraction.tex
+++ b/4vehicle-semantics-extraction.tex
@@ -333,7 +333,7 @@ With the interest of differentiating between chromatic and achromatic vehicles, 
 \end{figure}
 
 
- \begin{algorithm}[!h]
+ \begin{algorithm}[!ht]
   \caption{Achromatic Color}
   \label{algo:achromatic}
   \begin{algorithmic}[1]
